# 07.12.2022_Dz

./: pyproject.toml  task1.py  task2.py  task3.py
