[tool.poetry]
name = "07-12-22-dz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "07"}]

[tool.poetry.dependencies]
python = "^3.9"
sympy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
